# SonicSage

./: .env.example  .gitignore  README.md  package-lock.json  package.json
cli/: cli.ts
contracts/scripts/: deploy.ts
contracts/sonic-agent/: Cargo.toml
contracts/sonic-agent/src/: ai_trading.rs  defi_strategy.rs  defi_strategy_manager.rs  lib.rs  notification_events.rs  price_alerts.rs  strategy_manager.rs
public/: index.html
server/: index.ts
server/middleware/: auth.ts
server/models/: PythPricePredictionModel.ts
server/routes/: apiRoutes.ts  priceAlertRoutes.ts
server/services/: DeFiStrategy.ts  NotificationServer.ts  ShyftDeFi.ts  SonicAgent.ts  SonicSVM.ts  index.ts
server/types/: express.d.ts
server/utils/: validation.ts
src/: App.tsx  SonicAITraderDemo.ts
src/components/: AIStrategyGeneratorComponent.tsx  DeFiStrategyComponent.tsx  JupiterTerminalComponent.tsx  PortfolioAnalytics.tsx  PortfolioAnalyticsComponent.tsx  PriceAlertComponent.tsx  PriceAlertsList.tsx  SonicAIDashboard.tsx  SonicAINavigatorApp.tsx  SonicAgentDashboard.tsx  StrategyDashboard.tsx  StrategyMarketplaceComponent.tsx  TokenIcon.tsx  TradingDashboard.tsx  TradingRecommendations.tsx
src/constants/: config.ts  endpoints.ts  tokens.ts
src/contexts/: SonicAgentContext.tsx
src/hooks/: index.ts  useMarketData.ts  useNotifications.ts  usePortfolio.ts  useTradingNotifications.ts
src/idl/: sonic_agent.ts
src/providers/: NotificationProvider.tsx
src/services/: AIOptimizationService.ts  AIStrategyService.ts  AITrading.ts  DeFiStrategyService.ts  JupiterService.ts  (+11 more)
(+18 files in other folders)
