[package]
name = "sonic-agent"
version = "0.1.0"
description = "SonicAgent - AI-powered DeFi agent for Sonic SVM"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/your-username/sonic-agent"

[lib]
crate-type = ["cdylib", "lib"]
name = "sonic_agent"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
solana-program = "1.16.0"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1